--- a/ash_project/templates/home.html
+++ b/ash_project/templates/home.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> Welcome to home page!!! </h1>
+    <h4> welcome message from views.py using dictionary: {{msg}}</h4>
 </body>
 </html>
