crud operations before edit and delete

--- a/ash_project/templates/product_app/product_app.html
+++ b/ash_project/templates/product_app/product_app.html
@@ -39,8 +39,8 @@
                              <tr>
                                   <td><strong>Is_available?:</strong></td>
                                   <td>
-                                       <input type="radio" value="1" name="avail" id=""> YES
-                                       <input type="radio" value="0" name="avail" id=""> NO
+                                       <input type="radio" value="1" name="is_avail" id=""> YES
+                                       <input type="radio" value="0" name="is_avail" id=""> NO
                                   </td>
                              </tr>
 
@@ -49,6 +49,9 @@
                              </tr>
                     </table>
           </form>
+          <hr>
+     
+     <a align="center" href="/product_app/productdash"><button>Go Back</button></a>
 
 </body>
 </html>
