--- a/ash_project/templates/ashstore/home.html
+++ b/ash_project/templates/ashstore/home.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"
     <title>Document</title>
 </head>
 <body>
@@ -23,7 +25,9 @@
     <h6> Loop control instruction </h6>
     {% for x in data %}
         {{x}}
-    {% endfor %}    
+    {% endfor %}
+    <button onclick="hello()"> Click Me</button>
+    <script src="{% static 'js/main.js' %}"></script>    
 </body>
 </html>
 
