--- a/ash_project/templates/ashstore/index.html
+++ b/ash_project/templates/ashstore/index.html
@@ -1,1 +1,65 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block 'main' %}
+
+
+<div class="row mt-4">
+    <div class="col-md-3">
+        <h4> Filter By Category </h4>
+        <hr>
+        <div class="row">
+        <div class="col-md-8">
+            <p><a href="/catfilter/1" class="anchor">By Mobile</a></p>
+            <p><a href="/catfilter/2" class="anchor">By Shoes</a></p>
+            <p><a href="/catfilter/3" class="anchor">By Clothes</a></p>
+        </div>
+            <div class="col-md-4">
+                <button type="button" class="btn btn-outline-info btn-sm">Reset</button>
+            </div>
+        </div>
+        <h4>Filter by Price</h4>
+        <hr>
+        <form>
+            <div class="mb-3">
+                <label for="input1" class="form-label">Minimum Amount:</label>
+                <input type="number" class="form-control" name="ipass" id="input3" placeholder="Enter min amount">
+            </div>
+            <div class="mb-3">
+                <label for="input2" class="form-label">Maximum Amount:</label>
+                <input type="number" class="form-control" name="ipass" id="input3" placeholder="Enter max amount">
+            </div>
+            <div class="mb-3">
+                <button type="button" class="btn btn-success">Search</button>
+            </div>
+        </form>
+        <h4>Sort by Price</h4>
+        <hr>
+        <p><a href="#" class="anchor">From high to low</a></p>
+        <p><a href="#" class="anchor">From low to high</a></p>
+    </div>
+    <div class="col-md-9">
+        <h3> Products </h3>
+        <div class="row">
+            {% for x in pdata %}
+            <div class="col-md-3 mb-3">
+                <div class="card" style="width: 100%;">
+                    <img src="{% static 'assets/images/iphone.png' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{x.name}}</h5>
+                        {% if x.cat == 1 %}
+                        <p class="card-text">Category: Mobile </p>
+                        {% elif x.cat == 2 %}
+                        <p class="card-text">Category: Shoes </p>
+                        {% else %}
+                        <p class="card-text">Category: Clothes </p>
+                        {% endif %}
+                        <p class="card-text">Price: {{x.price}}</p>
+                        <a href="/pdetails" class="btn btn-primary">More Details</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endblock 'main' %}
