--- a/ash_project/templates/ashstore/index.html
+++ b/ash_project/templates/ashstore/index.html
@@ -7,13 +7,26 @@
     <div class="col-md-3">
         <h4> Filter By Category </h4>
         <hr>
-        <div class="row">
-        <div class="col-md-8">
-            <p><a href="/catfilter/1" class="anchor">By Mobile</a></p>
-            <p><a href="/catfilter/2" class="anchor">By Shoes</a></p>
-            <p><a href="/catfilter/3" class="anchor">By Clothes</a></p>
-        </div>
-            <div class="col-md-4">
+        <div class="row mb-3">
+            <!-- <div class="col-md-8">
+                <p><a href="/catfilter/1" class="anchor">By Mobile</a></p>
+                <p><a href="/catfilter/2" class="anchor">By Shoes</a></p>
+                <p><a href="/catfilter/3" class="anchor">By Clothes</a></p>
+            </div> -->
+            <div class="col-md-6 mb-1">
+                <div class="dropdown">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Filters
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/catfilter/1">By Mobile</a></li>
+                        <li><a class="dropdown-item" href="/catfilter/2">By Shoes</a></li>
+                        <li><a class="dropdown-item" href="/catfilter/3">By Clothes</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
                 <button type="button" class="btn btn-outline-info btn-sm">Reset</button>
             </div>
         </div>
@@ -28,8 +41,13 @@
                 <label for="input2" class="form-label">Maximum Amount:</label>
                 <input type="number" class="form-control" name="ipass" id="input3" placeholder="Enter max amount">
             </div>
-            <div class="mb-3">
-                <button type="button" class="btn btn-success">Search</button>
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <button type="button" class="btn btn-sm btn-success">Search</button>
+                </div>
+                <div class="col-md-6">
+                    <button type="button" class="btn btn-sm btn-outline-info">Reset</button>
+                </div>
             </div>
         </form>
         <h4>Sort by Price</h4>
