--- a/ash_project/templates/header.html
+++ b/ash_project/templates/header.html
@@ -12,7 +12,7 @@
         defer></script> -->
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <script src="{% static 'assets/js/bootstrap.min.js' %}" defer></script>
-    <script src="{% static 'assets/js/popper.min.js' %}" defer></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <title>Ekart | Cart</title>
@@ -57,6 +57,9 @@
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-primary" type="submit">Search</button>
                         </form>
+                        <div class="d-flex ms-3 mx-2">
+                            <a href="cart.html"><i class="bi bi-cart4 h4"></i></a>
+                          </div>
                     </div>
                 </div>
             </nav>
