--- a/ash_project/templates/footer.html
+++ b/ash_project/templates/footer.html
@@ -1,17 +1,27 @@
-<div class="row mt-3">
+
+<div class="row p-4 mt-3 bg-dark text-light">
     <div class="col-md-4">
-        <h5>Addess</h5>
+        <h5><i class="bi bi-geo-alt"></i> Addess</h5>
         <hr>
         <p> Ekart Pvt Ltd.</p>
         <p> Ishaan Arcade 1,<br>
             2nd floor, <br>
             Thane-West
         </p>
-        <p>Write to us: ekart@gmail.com</p>
-        <p>Speak with us: +91 9876543121</p>
+        <div class="row">
+            <div class="col-md-12">
+                <i class="bi bi-envelope"></i> Write to us: ekart@gmail.com
+            </div>
+            <div class="col-md-12">
+                <i class="bi bi-telephone"></i> Speak with us: +91 9876543121
+            </div>
+            
+        </div>
+        
+        
     </div>
     <div class="col-md-4">
-        <h5>Quick Links</h5>
+        <h5><i class="bi bi-link-45deg"></i> Quick Links</h5>
         <hr>
         <ul>
             <li><a class="anchor" href="home.html">Home</a></li>
@@ -22,17 +32,17 @@
         </ul>
     </div>
     <div class="col-md-4">
-        <h5> Follow our socials </h5>
+        <h5><i class="bi bi-person"></i> Follow our socials </h5>
         <hr>
         <ul>
             <li><i class="bi bi-whatsapp"></i><a class="anchor"
-                    href="http://www.whatsapp.com/">&nbsp;WhatsApp</a></li>
+                    href="http://www.whatsapp.com/">&nbsp;&nbsp;&nbsp;WhatsApp</a></li>
             <li><i class="bi bi-twitter-x"></i><a class="anchor"
-                    href="http://www.twitter.com/">&nbsp;Twitter</a></li>
+                    href="http://www.twitter.com/">&nbsp;&nbsp;&nbsp;Twitter</a></li>
             <li><i class="bi bi-facebook"></i><a class="anchor"
-                    href="http://www.facebook.com/">&nbsp;Facebook</a></li>
+                    href="http://www.facebook.com/">&nbsp;&nbsp;&nbsp;Facebook</a></li>
             <li><i class="bi bi-linkedin"></i><a class="anchor"
-                    href="http://www.linkedin.com/">&nbsp;LinkedIn</a></li>
+                    href="http://www.linkedin.com/">&nbsp;&nbsp;&nbsp;LinkedIn</a></li>
         </ul>
     </div>
 </div>
