finished re-touching of frontend

--- a/ash_project/templates/ashstore/cart.html
+++ b/ash_project/templates/ashstore/cart.html
@@ -3,4 +3,76 @@
 {% block 'main' %}
 
 
+<div class="row mt-3">
+    <div class="col-md-9">
+        <h5 class="bg-primary text-white p-2">Customer Details</h5>
+        <table class="table table-borderless">
+            <tr>
+                <th>Customer Name</th>
+                <td> IT Vedant Thane</td>
+            </tr>
+            <tr>
+                <th> Mobile Number</th>
+                <td> +91 </td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td> itvedant@gmail.com</td>
+            </tr>
+        </table>
+        <h5 class="bg-primary text-white p-2">Order Details</h5>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="{% static 'assets/images/iphone.png' %}" width="100%" alt="">
+            </div>
+            <div class="col-md-9 mt-4">
+                <table class="table table-borderless">
+                    <tr>
+                        <th>Product name</th>
+                        <td> iPhone</td>
+                    </tr>
+                    <tr>
+                        <th> Price</th>
+                        <td> Rs.1,49,999 </td>
+                    </tr>
+                    <tr>
+                        <th>Product Category</th>
+                        <td> Mobile</td>
+                    </tr>
+                    <!-- <tr> -->
+                    <!-- <th>Quantity</th> -->
+                    <!-- <td> -->
+                    <!-- <button class="btn btn-outline-danger btn-sm">-</button> -->
+                    <!-- <input type="number" name="qty"> -->
+                    <!-- <button class="btn btn-outline-success btn-sm">+</button> -->
+                    <!-- </td> -->
+                    <!-- </tr> -->
+                    <tr>
+                        <td><button class="btn btn-danger"> Remove Item</button></td>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <h5 class="bg-primary text-white p-2">Order Total</h5>
+        <table class="table table-borderless">
+            <tr>
+                <th>Order Total</th>
+                <td>4</td>
+            </tr>
+            <tr>
+                <th>Total Amount</th>
+                <td>Rs.5,99,996</td>
+            </tr>
+            <tr>
+                <td><button class="btn btn-success">Place Order</button></td>
+            </tr>
+
+        </table>
+    </div>
+</div>
+
+
 {% endblock 'main' %}
