--- a/ash_project/templates/ashstore/contact.html
+++ b/ash_project/templates/ashstore/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block 'main' %}
 
-<div class="row mt-2">
+<div class="row bg-info p-2 text-dark bg-gradient bg-opacity-50">
 
     <div class="row mt-3">
         <div class="col-md-6">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="input4" class="form-label"><strong>Feedback:</strong></label>
-                    <input type="textarea" class="form-control" name="cipass" id="input4" placeholder="Enter Feedback">
+                    <textarea class="form-control" name="cipass" id="input4" rows="4" cols="50" placeholder="Enter Feedback"></textarea>
                 </div>
                 <div class="mb-3">
                     <button type="button" class="btn btn-success">Submit</button>
