--- a/ash_project/templates/ashstore/index.html
+++ b/ash_project/templates/ashstore/index.html
@@ -3,7 +3,7 @@
 {% block 'main' %}
 
 
-<div class="row mt-4">
+<div class="row bg-info p-2 text-dark bg-gradient bg-opacity-25">
     <div class="col-md-3">
         <h4> Filter By Category </h4>
         <hr>
