--- a/ash_project/templates/footer.html
+++ b/ash_project/templates/footer.html
@@ -1,49 +1,53 @@
-
-<div class="row p-4 mt-3 bg-dark text-light">
+<div class="row p-4 bg-dark text-light">
     <div class="col-md-4">
-        <h5><i class="bi bi-geo-alt"></i> Addess</h5>
+        <h5><b class="bi bi-geo-alt text-warning font-weight-bold"> Address</b></h5>
         <hr>
-        <p> Ekart Pvt Ltd.</p>
+        <p> AshKart Pvt Ltd.</p>
         <p> Ishaan Arcade 1,<br>
             2nd floor, <br>
             Thane-West
         </p>
         <div class="row">
             <div class="col-md-12">
-                <i class="bi bi-envelope"></i> Write to us: ekart@gmail.com
+                <i class="bi bi-envelope"></i> Write to us: office@ashkart.com
             </div>
             <div class="col-md-12">
                 <i class="bi bi-telephone"></i> Speak with us: +91 9876543121
             </div>
-            
+
         </div>
-        
-        
+
+
     </div>
     <div class="col-md-4">
-        <h5><i class="bi bi-link-45deg"></i> Quick Links</h5>
+        <h5><b class="bi bi-link-45deg text-warning font-weight-bold"> Quick Links</b></h5>
         <hr>
         <ul>
-            <li><a class="anchor" href="home.html">Home</a></li>
-            <li><a class="anchor" href="cart.html">Your Cart</a></li>
-            <li><a class="anchor" href="about.html">About us</a></li>
-            <li><a class="anchor" href="contact.html">Contact us</a></li>
+            <li><a class="text-white" style="text-decoration: none;" href="home.html">Home</a></li>
+            <li><a class="text-white" style="text-decoration: none;" href="cart.html">Your Cart</a></li>
+            <li><a class="text-white" style="text-decoration: none;" href="about.html">About us</a></li>
+            <li><a class="text-white" style="text-decoration: none;" href="contact.html">Contact us</a></li>
 
         </ul>
     </div>
     <div class="col-md-4">
-        <h5><i class="bi bi-person"></i> Follow our socials </h5>
+        <h5><b class="bi bi-person text-warning font-weight-bold"> Our socials</b></h5>
         <hr>
         <ul>
-            <li><i class="bi bi-whatsapp"></i><a class="anchor"
+            <li><i class="bi bi-whatsapp"></i><a class="text-white" style="text-decoration: none;"
                     href="http://www.whatsapp.com/">&nbsp;&nbsp;&nbsp;WhatsApp</a></li>
-            <li><i class="bi bi-twitter-x"></i><a class="anchor"
+            <li><i class="bi bi-twitter-x"></i><a class="text-white" style="text-decoration: none;"
                     href="http://www.twitter.com/">&nbsp;&nbsp;&nbsp;Twitter</a></li>
-            <li><i class="bi bi-facebook"></i><a class="anchor"
+            <li><i class="bi bi-facebook"></i><a class="text-white" style="text-decoration: none;"
                     href="http://www.facebook.com/">&nbsp;&nbsp;&nbsp;Facebook</a></li>
-            <li><i class="bi bi-linkedin"></i><a class="anchor"
+            <li><i class="bi bi-linkedin"></i><a class="text-white" style="text-decoration: none;"
                     href="http://www.linkedin.com/">&nbsp;&nbsp;&nbsp;LinkedIn</a></li>
         </ul>
+    </div>
+</div>
+<div class="row bg-dark text-light">
+    <div class="col-md-4 p-2 mx-auto">
+        Copyright @2023 All rights reserved by <span class="text-warning font-weight-bold" >AshKart Pvt. Ltd</span>
     </div>
 </div>
 </div>
