--- a/ash_project/templates/header.html
+++ b/ash_project/templates/header.html
@@ -26,7 +26,8 @@
         <div class="row mt-0">
             <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Ekart</a>
+                    <a class="navbar-brand" href="/">
+                        <img class="logo me-2" src="{% static 'assets/images/logo.png' %}" alt="" width="40" height="40"> AshKart </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -35,31 +36,37 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
+                                <a class="nav-link" href="/aboutus">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/contactus">Contact</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="login.html">Login</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" href="register.html">Register</a>
+                                <a class="nav-link" href="register.html">Login</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="logout.html">Logout</a>
-                            </li>
+                            </li> -->
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-primary" type="submit">Search</button>
                         </form>
                         <div class="d-flex ms-3 mx-2">
-                            <a href="cart.html"><i class="bi bi-cart4 h4"></i></a>
-                          </div>
+                            <a class="text-white" style="text-decoration: none;" href="/cart"><i class="bi bi-cart4 h4"></i></a>
+                        </div>
+                        <div class="d-flex ms-3 mx-2">
+                            <a class="text-white" style="text-decoration: none;" href="/logout"><i class="bi bi-box-arrow-in-left"></i></i></a>
+                        </div>  
+                        <!-- <div class="nav-item">
+                            <button class="btn btn-outline-primary" type="submit">Search</button>
+                        </div> -->
                     </div>
                 </div>
             </nav>
