--- a/ash_project/templates/header.html
+++ b/ash_project/templates/header.html
@@ -54,8 +54,8 @@
                                 <a class="nav-link" href="logout.html">Logout</a>
                             </li> -->
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <form class="d-flex" role="search" action="/search">
+                            <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-primary" type="submit">Search</button>
                         </form>
                         <div class="d-flex ms-3 mx-2">
