product details page rendered

--- a/ash_project/templates/ashstore/index.html
+++ b/ash_project/templates/ashstore/index.html
@@ -78,7 +78,7 @@
                         <p class="card-text">Category: Clothes </p>
                         {% endif %}
                         <p class="card-text">Price: {{x.price}}</p>
-                        <a href="/pdetails" class="btn btn-primary">More Details</a>
+                        <a href="/pdetails/{{x.id}}" class="btn btn-primary">More Details</a>
                     </div>
                 </div>
             </div>
