adding media files

--- a/ash_project/templates/ashstore/product_details.html
+++ b/ash_project/templates/ashstore/product_details.html
@@ -4,7 +4,7 @@
 
 <div class="row mt-5">
     <div class="col-md-4" >
-        <img src="{% static 'assets/images/iphone.png' %}" alt="" width="100%">
+        <img src="{{product.pimage.url}}" alt="" width="100%" height="350px">
     </div>
     <div class="col-md-5" >
         <h4>{{product.name}}</h4>
