--- a/ash_project/templates/ashstore/index.html
+++ b/ash_project/templates/ashstore/index.html
@@ -67,7 +67,7 @@
             {% for x in pdata %}
             <div class="col-md-3 mb-3">
                 <div class="card" style="width: 100%;">
-                    <img src="{% static 'assets/images/iphone.png' %}" class="card-img-top" alt="...">
+                    <img src="{{x.pimage.url}}" class="card-img-top" alt="..." width="100%" height="200px">
                     <div class="card-body">
                         <h5 class="card-title">{{x.name}}</h5>
                         {% if x.cat == 1 %}
