--- a/ash_project/templates/header.html
+++ b/ash_project/templates/header.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link" href="login.html">Login</a>
                             </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" href="register.html">Login</a>
+                                <a class="nav-link" href="/accounts/login">Login</a>
                             </li>
                             <!-- <li class="nav-item">
                                 <a class="nav-link" href="logout.html">Logout</a>
