--- a/ash_project/templates/ashstore/cart.html
+++ b/ash_project/templates/ashstore/cart.html
@@ -67,7 +67,7 @@
                 <td>Rs.5,99,996</td>
             </tr>
             <tr>
-                <td><button class="btn btn-success">Place Order</button></td>
+                <td><a href="/porder"><button class="btn btn-success">Place Order</button></a></td>
             </tr>
 
         </table>
