--- a/ash_project/templates/ashstore/cart.html
+++ b/ash_project/templates/ashstore/cart.html
@@ -49,9 +49,9 @@
                     <tr>
                     <th>Quantity</th>
                     <td>
-                    <button class="btn btn-outline-danger btn-sm">-</button>
+                    <a href="/changeqty/{{x.id}}?q=minus" class="href"><button class="btn btn-outline-danger btn-sm">-</button></a>
                     <input type="number" name="qty" value="1">
-                    <button class="btn btn-outline-success btn-sm">+</button>
+                    <a href="/changeqty/{{x.id}}?q=plus" class="href"><button class="btn btn-outline-success btn-sm">+</button></a>
                     </td>
                     </tr>
                     <tr>
@@ -68,11 +68,11 @@
         <table class="table table-borderless">
             <tr>
                 <th>Order Total</th>
-                <td>4</td>
+                <td>{{n}}</td>
             </tr>
             <tr>
                 <th>Total Amount</th>
-                <td>Rs.5,99,996</td>
+                <td>Rs.{{amt}}</td>
             </tr>
             <tr>
                 <td><a href="/porder"><button class="btn btn-success">Place Order</button></a></td>
