quantity update functionality

--- a/ash_project/templates/ashstore/cart.html
+++ b/ash_project/templates/ashstore/cart.html
@@ -50,7 +50,7 @@
                     <th>Quantity</th>
                     <td>
                     <a href="/changeqty/{{x.id}}?q=minus" class="href"><button class="btn btn-outline-danger btn-sm">-</button></a>
-                    <input type="number" name="qty" value="1">
+                    <input type="number" name="qty" value="{{x.qty}}">
                     <a href="/changeqty/{{x.id}}?q=plus" class="href"><button class="btn btn-outline-success btn-sm">+</button></a>
                     </td>
                     </tr>
