--- a/ash_project/templates/ashstore/placeorder.html
+++ b/ash_project/templates/ashstore/placeorder.html
@@ -1,6 +1,98 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block 'main' %}
 
+
+{% block 'main' %}
+<div class="row mt-3">
+    <div class="col-md-9">
+        <h5 class="bg-success text-white p-2">Customer Details</h5>
+
+        <table class="table table-borderless">
+            <tr>
+                <th>Customer Name</th>
+                <td>{{user.username}}</td>
+            </tr>
+            <tr>
+                <th>Mobile Number</th>
+                <td>9898989898</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{user.email}}</td>
+            </tr>
+        </table>
+
+        <h5 class="bg-success text-white p-2">Order Details</h5>
+        {% for x in orders %}
+        <div class="row">
+            <div class="col-md-3">
+                <img src="{{x.pid.pimage.url}}" height="200px" width="100%" alt="">
+            </div>
+
+            <div class="col-md-9 mt-4">
+                <table class="table table-borderless">
+                    <tr>
+                        <th>Order ID:</th>
+                        <td>{{x.order_id}}</td>
+                    </tr>
+                    
+                    <tr>
+                        <th>Name:</th>
+                        <td>{{x.pid.name}}</td>
+                    </tr>
+
+                    <tr>
+                        <th>Price:</th>
+                        <td>Rs.{{x.pid.price}}</td>
+                    </tr>
+                    <tr>
+                        <th>Quantity:</th>
+                        <td>{{x.qty}}</td>
+                    </tr>
+
+                    <tr>
+                        <th>Product Category</th>
+                        {% if x.pid.cat == 1 %}
+                        <td> Mobile</td>
+                        {% elif x.pid.cat == 2 %}
+                        <td> Shoes</td>
+                        {% else %}
+                        <td> Clothes </td>
+                        {% endif %}
+                    </tr>
+
+                    </tr>
+
+                    <!-- <tr>
+                        <td><button class="btn btn-danger">Remove</button></td>
+                    </tr> -->
+
+                </table>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="col-md-3">
+        <h5 class="bg-success text-white p-2">Cart Total</h5>
+        <table class="table table-borderless">
+            <tr>
+                <th>Total Items</th>
+                <td>{{n}}</td>
+            </tr>
+            <tr>
+                <th>Total Amount</th>
+                <td>Rs.{{amt}}</td>
+            </tr>
+            <tr>
+                <td class="text-center"><button class="btn btn-warning">Make Payment</button></td>
+            </tr>
+            <tr>
+                <td class="text-center"><button class="btn btn-danger">Cancel Order</button></td>
+            </tr>
+        </table>
+    </div>
+</div>
+<!--Main Section starts-->
 
 {% endblock 'main' %}
