added razorpay integration

--- a/ash_project/templates/ashstore/placeorder.html
+++ b/ash_project/templates/ashstore/placeorder.html
@@ -85,7 +85,7 @@
                 <td>Rs.{{amt}}</td>
             </tr>
             <tr>
-                <td class="text-center"><button class="btn btn-warning">Make Payment</button></td>
+                <td class="text-center"><a href="/makepayment" class="href"><button type="submit" class="btn btn-warning">Make Payment</button></a></td>
             </tr>
             {% for x in cancel %}
             <tr>
